--- a/pyber_starter.ipynb
+++ b/pyber_starter.ipynb
@@ -477,7 +477,7 @@
     "plt.title(\"Note: Circle size correlates with driver count per city.\", x=1.5, y=0.9)\n",
     "\n",
     "# Save Figure\n",
-    "plt.savefig('figures/books_read.png')"
+    "plt.savefig('figures/avgFareVS.png')"
    ]
   },
   {
